<resources>
    <string name="app_name"> 유니팅</string>
    <!--메인 바텀네비게이션바 탭이름-->
    <string name="tab0_title">home</string>
    <string name="tab1_title">meeting</string>
    <string name="tab2_title">rating</string>
    <string name="tab3_title">board</string>
    <string name="tab4_title">chat</string>
    <!--툴바 이름-->
    <string name="toolbar_title">UNITING</string>
    <string name="toolbar_title_community">커뮤니티</string>
    <string name="toolbar_title_message">매칭</string>


    <string name="help_mail">help@uniting.kr</string>

    <!--본인인증 안내 멘트-->
    <string name="pre_certification1">\ 유니팅은 신뢰할 수 있는 서비스를 위해 철저한 본인 인증을 진행하고 있습니다. \n\n 모든 회원이 본인인증을 거치며, 유령회원, 알바회원은 단 한명도 없습니다.</string>
    <string name="pre_certification2">\ 유니팅은 대학생들의 커뮤니티에요. 익명 커뮤니티, 미팅, 번개 그리고 채팅과 보이스톡까지 마음껏 즐겨보세요😃 </string>
    <string name="pre_certification3">  연락처상 지인, 같은 대학 회원, 페이북 친구를 차단할 수 있습니다.</string>

    <!--심사 멘트-->
    <string name="screening1"> 심사를 기다리시는 동안 대학을 인증해주세요! </string>
    <string name="screening2"> 심사를 기다리시는 동안 자기소개와 스토리를 완성해 주세요! </string>

    <!--계정 탈퇴시 안내멘트-->
    <string name="withdraw1">  계정을 삭제하실 경우 2주간 재가입하실 수 없으며, 잔여 다이아와 데이터가 모두 삭제되어 복구하실 수 없습니다. </string>
    <string name="withdraw2">  계정 휴면 및 알림끄기를 선택하실 경우 회원님의 프로필이 더 이상 다른 회원님들에게 소개되지 않으며 모든 활동이 중단된 상태로 전환됩니다. \n\n 또한 다시 로그인 하시면 언제든지 휴면을 해제할 수 있습니다.  </string>

    <!--초대 안내멘트-->
    <string name="invite1">  아래 초대 코드로 친구가 가입하면 회원님과 상대방 모두에게 다이아 30개를 지급해드립니다.</string>
    <string name="invite2">  친구의 초대로 가입하셨나요? 친구의 초대코드를 입력하면, 회원님과 친구 모두 다이아 30개가 지급됩니다. </string>


    <!--미팅 안내멘트-->
    <string name="meeting_card_1">  미팅 신청 전, 하단의 프로필 확인을 클릭해주세요. 주최자가 프로필 보기를 수락한 사람만 프로필을 열어볼 수 있습니다. </string>
    <string name="input_email_for_use_id">이메일을 입력해주세요.</string>
    <string name="input_eng_num_password">6자 이상 입력해주세요.</string>
    <string name="email_string">이메일</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="signup_string">회원가입</string>
    <string name="request_sns_code">인증번호 요청</string>
    <string name="input_number">전화번호 입력</string>
    <string name="input_password_repeat">비밀번호를 한 번 더 입력해주세요.</string>
    <string name="create_account">계정 만들기</string>
    <string name="check_string">인증</string>
    <string name="check_num_string">인증번호</string>
    <string name="password_string">비밀번호</string>

    <string name="self_introduction"> 본인의 매력을 어필해주세요! 정성스러운 소개글을 쓸 수록 매칭 확률이 올라갑니다.</string>
    <string name="story0">\   저의 매력 포인트는요 </string>
    <string name="story1">\   저는 쉴 때 이런걸 해요 </string>
    <string name="story2">\    요즘 이런 것에 관심이 있어요</string>

    <!--certification-->
    <string name="certification_guide_public">\ · 대학과 전공 중 하나만 선택해 공개할 수 있습니다. \n · 공개할 항목은 아래의 ‘프로필 미리보기’ 탭에서 선택하실 수 있습니다. (변경 가능) </string>
    <string name="certification_guide_public2">\ · 다이 30개를 선물로 드립니다. \n · 인증 마크를 달아드립니다. \n · 공개 전환시 친구와의 매칭 확률이 높아집니다.</string>
    <string name="certification_guide_photo">\ · 학적이 변경된 경우 아래에 인증 자료를 첨부하여 인증을 진행하실 수 있습니다.  \n · 인증은 학생증 혹은 재학증명서만 가능하며, 인증 자료에 대학교, 본인 이름이 포함된 경우에만 인증됩니다. </string>
    <string name="certification_guide_email">\ · 인증하실 경우 다이아 60개(대학 30개, 전공 30개)를 선물로 드려요.  \n · 철저한 신분 인증으로 인증하신 분의 매칭 확률이 올라가는 효과가 있어요. \n · 같은 대학 회원을 차단할 수 있어요.   </string>

    <string name="certification_guide_major">\ · 이미 전공을 인증한 회원님의 경우,  전공명을 본인이 변경할 수 있습니다.  \n · 단, 동일한 의미의 범위 내에서만 변경 가능해요.  \n · 학과, 단과대 단위의 이름은 가능하나, 문과, 이과, 예체능 등 너무 포괄적인 범위는 불가능해요.  \n · 가능한 예: 체육학과 → 체육대학, 경제학과 → 상경계열 등   \n · 불가능한 예: 의학과 → 수학과 (다른 과), 경영학과 → 문과 (너무 포괄적) 등</string>

    <string name="signup_certification_guide">\ · 인증하실 경우 다이아 30개(대학 15개, 전공 15개)를 선물로 드려요.  \n · 철저한 신분 인증으로 인증하신 분의 매칭 확률이 올라가는 효과가 있어요. \n · 같은 대학 회원을 차단할 수 있어요.  </string>
    <string name="signup_certification_guide2">\ · 회원님의 프라이버시를 위해, 가입시 인증한 대학은 비공개 상태로 가입되니 걱정 마세요.  원하실 경우 가입 후 공개 전환할 수 있습니다.</string>


    <string name="block_guide">\ 페이스북, 대학, 연락처상의 지인을 차단할 수 있습니다. 한 회원님만 차단해도 두 분 모두 서로 소개, 연결되지 않습니다. </string>

    <string name="evaluation_guide1">\ · 호감이 있는 회원님에게 마음을 표현해 보세요. 마음을 표현한 회원님은 오늘의 소개 히스토리에 남게 됩니다. </string>
    <string name="evaluation_guide2">\ · 프로필 카드를 모두 받으셨다면, 미팅. · 번개 · 셀소 게시판에서 직접 친구를 찾아보세요! </string>
    <string name="evaluation_guide3">\ · 회원님의 선호를 반영하여 더 잘맞는 친구를 추천을 해드립니다. </string>
    <string name="evaluation_guide4">\ · (이벤트) 카드 10개를 사용할 때마다 4개의 다이아를 드립니다. </string>


    <string name="studentCard_screeningResult"> 나중에 인증할게요 </string>
    <string name="studentCard_screening_comment0"> 아직 학생증 인증을 신청하지 않았습니다.  </string>
    <string name="studentCard_screening_comment1"> 학생증에 "이름, 학교, 전공, 학번, 사진" 중 빠진 정보가 있습니다. 다시 신청해주세요.  </string>
    <string name="studentCard_screening_comment2"> 학생증의 사진과 본인이 올린 사진이 동일 인물이 아닙니다.다시 신청해주세요.  </string>
    <string name="studentCard_screening_comment3"> 학생증의 이름과 본인인증 결과가 다릅니다. 다시 신청해주세요. </string>
    <string name="studentCard_screening_comment4"> 학생증의 화질이 낮아 심사가 불가합니다. 다시 신청해주세요.  </string>
    <string name="studentCard_screening_ask"> 심사 결과가 잘못되었을 경우 "help@uniting.kr"로 문의 부탁드립니다. </string>

    <string name="membership_comment1"> 닉네임이 부적절합니다. </string>
    <string name="membership_comment2"> 학교를 정확하게 입력해 주세요. </string>
    <string name="membership_comment3"> 전공을 정확하게 입력해주세요. </string>
    <string name="membership_comment4"> 직업을 정확하게 입력해주세요. </string>
    <string name="membership_comment5"> 프로필 사진을 가이드라인에 맞춰 2장 이상 올려주세요. </string>


    <!--fcm_default_channel-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="facebook_app_id">1055592431445113</string>
    <string name="fb_login_protocol_scheme">fb1055592431445113</string>

    <!--    RemonCall-->
    <string name="remon_serviceId">12aca728-5bee-4700-aaf0-d6ab05b7eb24</string>
    <string name="remon_serviceKey">bb8c39da4488e45e74e1319601753a169ef86e26a7b32e43e2c03d1519e5aa19</string>

    <!--지인 차단-->
    <string name="block_facebook">페이스북 친구 차단하기</string>
    <string name="block_facebook_result"> (친구수: 미확인, 차단 해제됨) </string>
    <string name="block_university">같은 학교 차단하기</string>
    <string name="block_university_result"> (등록된 학교: 없음, 차단 해제됨)</string>
    <string name="block_contact">연락처 차단하기</string>
    <string name="block_contact_result"> (연락처수: 미확인, 차단 해제됨)</string>
    <!--인앱결제 키-->
    <string name="in_app_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAhICO5icE+9+zrh2kvQLFr6FyKLqftfyPyqkrVfUPQT0SUyZQ9lVrLvPh0WfKQLlIN8Ep1STkq73Fl06VbKoG0UGyp648k8fZAPZP6if8ZGLsV9dU2vr1do8Ay+MbdRWBsARNnzlYw1HykV1Oj2DcKgA9Nob4X1PN83AE3LjwUQ10Dx29GfrW/fLy4cYzkMSBzVWQYnLey1IAJOYsukS1kDNlZLfCSRwGCiNc/SFARAFN+IK8oIvrxNLsjlhoi+LkraiYLsIR1DZSa6KyU5Mb8DgnR1XP7m8Xlpfnm2HBWOn0wAL3S+PEXpFN6xc9zyOegUYdGpxyNFw7b6KrGs9AVwIDAQAB</string>


    <!--건의사항 -->
    <string name="suggestion"> 유니팅에게 무엇이든지 제안해주세요. (새로운 기능, 불편한 점 등) </string>

</resources>
